# mppsolar-lib-protocol-to-jk-bms-rs485

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig
include/esphome/components/jk_bms/: jk_bms.cpp  jk_bms.h
include/esphome/components/jk_modbus/: jk_modbus.cpp  jk_modbus.h
include/esphome/components/uart/: uart.cpp  uart.h  uart_common.h  uart_component.cpp  uart_component.h  uart_component_esp_idf.cpp  uart_component_esp_idf.h
include/esphome/core/: component.cpp  component.h  log.h
main/: BMSLibProtocolDataAdapter.h  BMSLibProtocolMockDataAdapter.cpp  BMSLibProtocolMockDataAdapter.h  BMSLibProtocolUARTHandler.cpp  BMSLibProtocolUARTHandler.h  CMakeLists.txt  Kconfig.projbuild  bms_lib_protocol_data_adapter.h  bms_lib_protocol_mock_data_adapter.cpp  bms_lib_protocol_mock_data_adapter.h  bms_lib_protocol_uart_handler.cpp  bms_lib_protocol_uart_handler.h  esphome_log.h  main.cpp  uart_common.cpp  uart_common.h  uart_component.cpp  uart_component.h  uart_device.cpp  uart_device.h  uart_idf.cpp  uart_idf.h
